--- a/大佬知识点总结/算法知识点.md
+++ b/大佬知识点总结/算法知识点.md
@@ -6,3 +6,65 @@
 https://zhuanlan.zhihu.com/p/30918614
 ```
 
+### 复杂度
+```shell 
+算法的时间复杂度,用来度量算法的运行时间,记做T(n)=O(f(n)), 它表示随着输入大小n的增大,算法执行
+需要的时间的增长速度可以用f(n)来描述
+    1.常数项对函数的增长速度影响并不大,所以当T(n)=c,c为一个常数的时候,这个算法的时间复杂度为O(1)
+      T(n) = n + 29 时间复杂度为O(n) 
+    2.高次项对于函数的增长速度的影响是最大的,n^3增长速度远超n^2
+      T(n) = n^3 + n^2 + 29，此时时间复杂度为 O(n^3)。
+    3.函数的阶数对函数的增长速度的影响是最显著的,所以忽略与最高阶相乘的函数
+      T(n) = 3n^3, 此时的时间复杂度为O(n^3)
+    
+    1.对于一个循环体,假设循环体的时间复杂度为O(n),循环次数为m,则这个循环的时间复杂度为O(nXm)
+        void aFunc(int n) {
+            for(int i = 0; i < n; i++) {         // 循环次数为 n
+                printf("Hello, World!\n");      // 循环体时间复杂度为 O(1)
+            }
+        }
+        此时时间复杂度为O(nX1), 即O(n)
+    2.对于多个循环,假设循环体的时间复杂度为O(n),各个循环的循环次数分别是a,b,c,则这个循环的时间复杂度
+        为O(nxaxbxc),分析的时候应该由里向外分析这些循环
+        void aFunc(int n) {
+            for(int i = 0; i < n; i++) {         // 循环次数为 n
+                for(int j = 0; j < n; j++) {       // 循环次数为 n
+                    printf("Hello, World!\n");      // 循环体时间复杂度为 O(1)
+                }
+            }
+        }
+        此时时间复杂度为O(nxnx1), 即O(n^2)
+    3.对于顺序执行的语句或者算法,总的时间复杂度等于其中最大的时间复杂度
+        void aFunc(int n) {
+            // 第一部分时间复杂度为 O(n^2)
+            for(int i = 0; i < n; i++) {
+                for(int j = 0; j < n; j++) {
+                    printf("Hello, World!\n");
+                }
+            }
+            // 第二部分时间复杂度为 O(n)
+            for(int j = 0; j < n; j++) {
+                printf("Hello, World!\n");
+            }
+        }
+        此时时间复杂度为max(O(n^2), O(n))即O(n^2)
+    4.对于条件判断语句,总的时间复杂度等于其中时间复杂度最大的路径的时间复杂度
+        void aFunc(int n) {
+        if (n >= 0) {
+            // 第一条路径时间复杂度为 O(n^2)
+            for(int i = 0; i < n; i++) {
+                for(int j = 0; j < n; j++) {
+                    printf("输入数据大于等于零\n");
+                }
+            }
+        } else {
+            // 第二条路径时间复杂度为 O(n)
+            for(int j = 0; j < n; j++) {
+                printf("输入数据小于零\n");
+            }
+        }
+    }
+        此时时间复杂度为max(O(n^2),O(n))即O(n^2)
+
+时间复杂度度分析的基本策略是:从内向外分析,从最深层开始分析,如果遇到函数调用,要深入函数进行分析
+```
